--- a/style.css
+++ b/style.css
@@ -1,156 +1,211 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
 /* @import url('https//:fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @import url('https//:fonts.googleapis.com/css2?family=Varela+Round&display=swap'); */
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #b1cad4;
+  margin: 0;
+  padding: 0;
+  background-color: #b1cad4;
 }
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 nav {
+  display: flex;
+  align-items: center;
+  font-family: "Bebas Neue", sans-serif;
+}
+
+.right-links{
     display: flex;
     align-items: center;
-    font-family: 'Ubuntu', sans-serif;
+    padding:10px;
 }
 
-.logo1 {
-    padding: 15px;
-}
-
-.logo2 {
+.social-media-icons{
     padding: 5px;
+    margin: 0 5px;
+}
+
+.logo2 img{
+    width: 28px;
 }
 
 .nav-div {
-    background-color: black;
-    display: flex;
-    flex-direction: row;
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 nav ul {
-    display: flex;
-    list-style-type: none;
-    align-items: center;
-    height: 58px;
-    color: white;
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  height: 58px;
+  color: white;
 }
 
 nav ul li {
-    padding: 0 10px;
+  padding: 0 10px;
+}
+
+.navbar-links {
+  font-weight: normal;
+  font-family: "Ubuntu", sans-serif;
+  color: gray;
 }
 
 .brand img {
-    width: 35px;
-    padding: 0 8px;
+  width: 30px;
+  height: 30px;
+  padding: 0 8px;
 }
 
+
 .brand {
-    display: flex;
-    align-items: center;
-    font-weight: bolder;
-    font-size: 1rem;
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+  font-weight: normal;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .container {
-    min-height: 67vh;
-    background-color: rgb(30, 29, 29);
-    color: white;
-    font-family: 'Varela Round', sans-serif;
-    display: flex;
-    margin: 18px auto;
-    width: 70%;
-    border-radius: 12px;
-    padding: 25px;
-    background-image: url('bg2.jpg');
+  background-color: rgb(30, 29, 29);
+  color: white;
+  display: flex;
+  margin: 18px auto;
+  max-width: 58rem;
+  border-radius: 12px;
+  padding: 25px;
+  background-image: url("./Assets/Images/bg2.jpg");
 }
 
-.bottom {
-    position: sticky;
-    bottom: 0;
-    height: 87px;
-    background-color: black;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
 
 .NCS {
-    font-size: xx-large;
-    color: rgb(43, 42, 42);
+  font-size: xx-large;
+  color: rgb(102, 101, 101);
+  font-weight: normal;
 }
 
 .icons {
-    margin: 14px;
-    cursor: pointer;
+  margin: 14px;
+  cursor: pointer;
 }
 
 #myProgressBar {
-    margin-top: 10px;
-    width: 75vw;
-    height: 4px;
-    cursor: pointer;
+  margin-top: 10px;
+  width: 75vw;
+  height: 4px;
+  cursor: pointer;
+}
+
+.songList{
+    width: 35rem;
+}
+
+.songItemContainer {
+  height: 25rem;
+  overflow-y: auto;
+  scrollbar-width: none;
 }
 
 .songItem {
-    height: 50px;
-    display: flex;
-    background-color: rgb(189, 187, 187);
-    width: 70%;
-    color: black;
-    margin: 15px 0;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 30px;
+  height: 50px;
+  display: flex;
+  background-color: rgb(189, 187, 187);
+  width: 70%;
+  color: black;
+  margin: 15px 0;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 30px;
 }
 
 #masterSongName {
-    display: flex;
-    flex-direction: initial;
-    flex-wrap: wrap;
+  margin: 0 10px;
 }
 
 .songItem img {
-    width: 43px;
-    margin: 0 23px;
-    border-radius: 12px;
+  width: 43px;
+  margin: 0 23px;
+  border-radius: 50px;
 }
 
 .timeStamp {
-    margin: 0 23px;
+  margin: 0 23px;
 }
 
 .timeStamp i {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+
+.bottom {
+  position: sticky;
+  bottom: 0;
+  height: 87px;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .songInfo {
-    display: flex;
-    flex-wrap: wrap;
-    font-family: 'Varela Round', sans-serif;
-    font-size: small;
-    position: absolute;
-    left: 13vw;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: small;
+  left: 13vw;
+}
+
+
+.music-name-holder{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.range{
+  accent-color: rgb(72, 72, 72);
+  
 }
 
 .songInfo img {
-    opacity: 0;
-    transition: opacity 0.5s ease-in;
+  opacity: 0;
+  transition: opacity 0.5s ease-in;
 }
+
 
 
 /* Media quaries for responsiveness from 320px*/
 
-@media (min-width: 320px) {
+
+@media (max-width: 750px) {
+
+    .container{
+        background-image: none;
+        background-color: #e9edef;
+        justify-content: center;
+    }
+
     .songItem {
-        width: 80%;
-        height: 50px;
-        border-radius: 30px;
+      width: 100%;
+      height: 50px;
+      border-radius: 30px;
+    }
+
+    .songList{
+      text-align: center;
     }
 }
